# OrderBook

./: CMakeLists.txt  README.md  grids_full.txt
benchmarks/: CMakeLists.txt  bench_bitwise_optimization.cpp  bench_cache_alignment.cpp  bench_find_price.cpp  bench_hash_collision.cpp  bench_loop_comparison.cpp  bench_loop_optimization.cpp  bench_median.cpp  bench_orderbook.cpp  bench_orderbook_workload.cpp  bench_prefetch.cpp  bench_prefetch_compare.cpp  bench_sliding_window_compare.cpp  bench_sliding_window_simple.cpp  bench_tiered_pool.cpp
framework/include/framework/: define.hpp  logger.hpp
framework/src/: gateway.hpp  grids.hpp  main.cpp  reader.hpp
impl/include/impl/: impl.hpp  memory_pool.hpp  order_book.hpp  order_book.hpp.bak  price_level_tree.hpp  sliding_window.hpp  sliding_window_ring.hpp  tiered_memory_pool.hpp
impl/src/: impl.cpp  order_book.cpp  sliding_window.cpp  sliding_window_ring.cpp
perf-orderbook/: bench_add_only.txt  bench_delete_only.txt  bench_output.txt  bench_output_baseline.txt  bench_output_baseline_40k.txt  bench_trade_only.txt  orderbook_case_study.md  orderbook_case_study_add_only.md  orderbook_case_study_baseline.md  orderbook_case_study_baseline_40k.md  orderbook_case_study_delete_only.md  orderbook_case_study_delete_only_before_idx.md  orderbook_case_study_delete_only_before_packed.md  orderbook_case_study_trade_only.md  perf-add-only.csv  perf-delete-only.csv  perf-stat.csv  perf-stat_baseline.csv  perf-stat_baseline_40k.csv  perf-trade-only.csv  system.txt  system_baseline.txt  system_baseline_40k.txt
perf_results/20260203_072028/: bench_compare.txt  bench_loop_comparison.txt  bench_prefetch_compare.txt  benchmark.json  benchmark.txt  e2e_perf.txt  e2e_summary.txt  e2e_time.txt  git_info.txt  summary.txt  system_info.txt
scripts/: parse_perf_orderbook.py  run_perf_orderbook_case_study.sh
tests/: CMakeLists.txt  test_order_book.cpp  test_tiered_pool.cpp
worklog/: optimize_delete.md  optimize_scheme_b.md  performance_boost.md
